[package]
name = "danmaku"
version = "1.7.1"
authors = ["rkscv", "kosette"]
edition = "2021"
rust-version = "1.81"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
futures = "0.3.30"
hex = "0.4"
md-5 = "0.10"
rand = "0.8"
regex = "1.10.6"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = [
    "rt-multi-thread",
    "sync",
] }
unicode-segmentation = "1.11"
url = "2.5.2"

[profile.release]
opt-level = "s"
lto = true
strip = true
