[package]
name = "danmaku"
version = "1.7.50"
authors = ["rkscv", "kosette"]
edition = "2021"
rust-version = "1.81"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
bincode = "1.3"
futures = "0.3"
hex = "0.4"
md-5 = "0.10"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "native-tls",
  "native-tls-alpn",
  "json",
  "stream",
  "charset",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
unicode-segmentation = "1.12"
url = "2.5"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
